--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/leaflet": "^1.7.0",
     "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
+    "react-create": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
