--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/leaflet": "^1.7.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "formatcoords": "^1.1.3",
+    "haversine-distance": "^1.2.1",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-create": "^1.0.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "sass": "^1.32.8",
